<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="realalertpopupVM" type="com.bedirhansapplication.app.modules.realalertpopup.data.viewmodel.RealalertpopupVM"/>
    </data>
    <LinearLayout android:id="@+id/linearColumngroupeight"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylebluegray_102">
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtGroupEight"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_2pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_3pxv" android:singleLine="true"
            android:text="@{realalertpopupVM.realalertpopupModel.txtGroupEight}"
            style="@style/txtSolid_4" tools:text="@string/lbl_red_alert"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtThisproductha"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_70pxh"
            android:layout_marginStart="@dimen/_70pxh"
            android:layout_marginTop="@dimen/_55pxv"
            android:layout_width="match_parent"
            android:text="@{realalertpopupVM.realalertpopupModel.txtThisproductha}"
            style="@style/txtPoppinsregular25" tools:text="@string/msg_this_product_ha"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGroupSeven" android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_21pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/_1pxv"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_1pxv" android:singleLine="true"
            android:text="@{realalertpopupVM.realalertpopupModel.txtGroupSeven}"
            style="@style/txtSolidRounded_2" tools:text="@string/lbl_close"/>
    </LinearLayout>
</layout>
