<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profiledietinfoVM" type="com.bedirhansapplication.app.modules.profiledietinfo.data.viewmodel.ProfiledietinfoVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearAndroidSmall"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnProfile"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_profile"
            android:textAllCaps="false" style="@style/btnSolid" tools:text="@string/lbl_profile"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnchooseyourgen"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_55pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylebluegray_6">
            <TextView android:ellipsize="end"
                android:id="@+id/txtChooseyourgen"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{profiledietinfoVM.profiledietinfoModel.txtChooseyourgen}"
                style="@style/txtPoppinsbold15" tools:text="@string/msg_choose_your_gen"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowellipsenine"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumnellipsenine"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.17"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylewhite_1">
                    <View
                        android:background="@drawable/rectangle_bg_bluegray_900_radius_8_28"
                        android:id="@+id/viewEllipseNine"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_16pxh"
                        android:layout_marginHorizontal="@dimen/_6pxh"
                        android:layout_marginVertical="@dimen/_6pxv" android:layout_width="@dimen/_16pxh"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGender"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_weight="0.26"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profiledietinfoVM.profiledietinfoModel.txtGender}"
                    style="@style/txtPoppinsregular18" tools:text="@string/lbl_male"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_14_305"
                    android:id="@+id/viewEllipseEight"
                    android:layout_height="@dimen/_28pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_42pxh"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_28pxh"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGenderOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.4"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profiledietinfoVM.profiledietinfoModel.txtGenderOne}"
                    style="@style/txtPoppinsregular18" tools:text="@string/lbl_female"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtChooseyourlif"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{profiledietinfoVM.profiledietinfoModel.txtChooseyourlif}"
                style="@style/txtPoppinsbold15" tools:text="@string/msg_choose_your_lif"/>
            <androidx.recyclerview.widget.RecyclerView
                android:gravity="center_horizontal"
                android:id="@+id/recyclerListellipsetwelve"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                itemSpace="@{@dimen/_20pxh}" tools:itemCount="2" tools:listitem="@layout/row_listellipsetwelve"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowellipsefifteen"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_21pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumnellipsefifteen"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_weight="0.15"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylewhite_1">
                    <View
                        android:background="@drawable/rectangle_bg_bluegray_900_radius_8_28"
                        android:id="@+id/viewEllipseFifteen"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_16pxh"
                        android:layout_marginBottom="@dimen/_5pxv"
                        android:layout_marginEnd="@dimen/_5pxh"
                        android:layout_marginStart="@dimen/_6pxh"
                        android:layout_marginTop="@dimen/_6pxv" android:layout_width="@dimen/_16pxh"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtModeratelyActi"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_weight="0.85"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profiledietinfoVM.profiledietinfoModel.txtModeratelyActi}"
                    style="@style/txtPoppinsregular18" tools:text="@string/msg_moderately_acti"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnlanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_69pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylebluegray_6">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.77"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profiledietinfoVM.profiledietinfoModel.txtLanguage}"
                    style="@style/txtPoppinsbold18" tools:text="@string/msg_enter_your_weig"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtWeight"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.23"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profiledietinfoVM.profiledietinfoModel.txtWeight}"
                    style="@style/txtPoppinsbold18_1" tools:text="@string/lbl_80_kg"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlanguageOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.72"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profiledietinfoVM.profiledietinfoModel.txtLanguageOne}"
                    style="@style/txtPoppinsbold18" tools:text="@string/msg_enter_your_heig"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDistance"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_weight="0.28"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profiledietinfoVM.profiledietinfoModel.txtDistance}"
                    style="@style/txtPoppinsbold18_1" tools:text="@string/lbl_160_cm"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlanguageTwo"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.7"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profiledietinfoVM.profiledietinfoModel.txtLanguageTwo}"
                    style="@style/txtPoppinsbold18" tools:text="@string/lbl_age"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNineteen"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_weight="0.3"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profiledietinfoVM.profiledietinfoModel.txtNineteen}"
                    style="@style/txtPoppinsbold18_1" tools:text="@string/lbl_19"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnOk" android:layout_gravity="end"
            android:layout_height="@dimen/_39pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_76pxv"
            android:layout_width="@dimen/_144pxh"
            android:paddingBottom="@dimen/_5pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@string/lbl_ok" android:textAllCaps="false"
            style="@style/btnSolidRounded_4" tools:text="@string/lbl_ok"/>
    </LinearLayout>
</layout>
