<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameAndroidSmall"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_A700">

    <LinearLayout
        android:id="@+id/linearColumnarrowleft"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"></androidx.appcompat.widget.Toolbar>


            <LinearLayout
                android:id="@+id/linearRowarrowleft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageArrowleft"
                    android:layout_width="20dp"
                    android:layout_height="19dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="25dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    />

                <TextView
                    android:id="@+id/txtAddProduct"
                    style="@style/txtPoppinssemibold20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="96dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="139dp"
                    android:layout_marginBottom="13dp"
                    android:layout_weight="0.86"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_add_product" />
            </LinearLayout>


        <LinearLayout
            android:id="@+id/linearColumnenterproductn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="22dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtEnterproductn"
                style="@style/txtPoppinsregular19_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="30dp"
                android:ellipsize="end"
                android:gravity="start"
                android:singleLine="true"
                android:text="@string/msg_enter_product_n" />

            <TextView
                android:id="@+id/txtGroupEightySeven"
                style="@style/txtSolidRounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="24dp"
                android:ellipsize="end"
                android:gravity="start"
                android:paddingStart="6dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:singleLine="true"
                android:text="@string/lbl_product_x2" />

            <TextView
                android:id="@+id/txtGroupEightySix"
                style="@style/txtSolidRounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="25dp"
                android:ellipsize="end"
                android:gravity="start"
                android:paddingStart="6dp"
                android:paddingTop="2dp"
                android:paddingBottom="1dp"
                android:singleLine="true"
                android:text="@string/lbl_11_12_20232" />
        </LinearLayout>

        <EditText
            android:id="@+id/etGroupNinety"
            style="@style/etSolidRounded_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/rectangle_bg_blue_200_radius_13_64"
            android:drawableEnd="@drawable/img_camera"
            android:drawablePadding="19dp"
            android:ellipsize="end"
            android:hint="@string/lbl_add_image"
            android:inputType="text"
            android:paddingStart="9dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:text="@={addproductVM.addproductModel.etGroupNinetyValue}"
            android:textColorHint="@color/black_900"
             />

        <ImageView
            android:id="@+id/imagePhotoAddProd"

            android:layout_width="238dp"
            android:layout_height="234dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="22dp"
            android:scaleType="fitXY"></ImageView>

    </LinearLayout>
</FrameLayout>
